# fakir-kv

./: .gitignore  Cargo.toml  README.md  notes.txt
benches/: bench_main.rs
benches/benchmarks/: cask.rs  mod.rs
src/: error.rs  lib.rs  main.rs  store.rs
src/cask/: mod.rs
src/storage/: config.rs  context.rs  file_lock.rs  fs_store.rs  fs_utils.rs  handle.rs  lock.rs  log.rs  log_reader.rs  log_writer.rs  mod.rs  rebuild.rs  utils.rs
