[package]
name = "fakir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
test = false

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
bytes = { version = "1.5.0", features = [] }
crc32fast = "1.3.2"
fs2 = "0.4.3"
log = "0.4.20"
libc = { version = "0.2.153" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
tempdir = "0.3.7"

[[bench]]
name = "bench_main"
harness = false
